# poivizdynamic

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  index.html  pyproject.toml
demo_output/: life.html  my foot print.html  starbuck1.html  starbuck2.html  starbuck22.html
docs/: Makefile  conf.py  example.ipynb  make.bat
src/poivizdynamic/: __init__.py  demo.py  poivizdynamic.py
src/poivizdynamic/data/: demo_fake_data.csv
tests/: test_poivizdynamic.py
