[tool.poetry]
name = "poivizdynamic"
version = "0.1.7"
description = "animate the poi map!"
authors = ["TianqingZhou"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
plotly = "^5.4.0"
requests = "^2.26.0"
timer = "^0.2.2"
datetime = "^4.3"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
